fixed search toggle button on mobile

--- a/src/fleming-theme/templates/layout/header.scss
+++ b/src/fleming-theme/templates/layout/header.scss
@@ -63,12 +63,16 @@ header {
     display: block;
     background: $turquoise;
     margin: 0;
-    position: absolute;
-    top: 0;
-    right: 0;
+    float: right;
 
     svg {
       fill: #fff;
+    }
+
+    &.perform-search {
+      position: absolute;
+      top: 0;
+      right: 0;
     }
   }
 
